1. Fix the margin problem on mobile. 2. Adjust resume data.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -377,6 +377,7 @@ ul
   a
     text-decoration: underline
   .resume
+    margin: 0
     border: none
     .contact
       border-radius: 20px
